<resources>
    <string name="app_name">PassActivity</string>
    <string name="your_name">YOUR NAME</string>
    <string name="your_surname">YOUR SURNAME</string>
    <string name="your_grade">YOUR GRADE</string>
    <string name="status">TEACHER/ADMIN/STUDENT</string>
    <string name="your_age">YOUR AGE</string>
    <string name="your_login">YOUR LOGIN</string>
    <string name="your_password">YOUR PASSWORD</string>
    <string name="login">LOGIN</string>
    <string name="password">PASSWORD</string>
    <string name="log_in">LOG IN</string>
    <string name="registrate">Registrate</string>
    <string name="name_error">ERROR. NAMESPACE IS EMPTY</string>
    <string name="surname_error">ERROR. SURNAMESPACE IS EMPTY</string>
    <string name="status1">TEACHER</string>
    <string name="status2">ADMIN</string>
    <string name="status3">STUDENT</string>
    <string name="status_error">ERROR. THERE\'S NO SUCH STATUS</string>
    <string name="login_error">ERROR. LOGINCASE IS EMPTY</string>
    <string name="password_error">ERROR. PASSWORDCASE IS EMPTY</string>
    <string name="age_error1">ERROR. NO SUCH AGE EXISTS</string>
    <string name="age_error2">ERROR. AGESPACE IS EMPTY</string>
    <string name="grade_error1">ERROR. NO SUCH GRADE EXISTS</string>
    <string name="grade_error2">ERROR. GRADESPACE IS EMPTY</string>
    <string name="reg_success">YOU REGISTERED SUCCESSFULLY!</string>
    <string name="reg_error">ERROR OCCURRED. CHECK INFORMATION YOU FILLED IN</string>
    <string name="log_success">YOU LOGGED IN SUCCESSFULLY!</string>
    <string name="log_error1">ERROR. SPACE FOR LOGIN OR PASSWORD IS EMPTY</string>
    <string name="log_error2">ERROR. CHECK YOUR LOGIN AND PASSWORD</string>
    <string name="log_error3">ERROR. SOME PROBLEMS WITH YOUR ACCOUNT. PLEASE, ASK ADMINISTRATOR OF THIS APP IN YOUR ORGANISATION FOR HELP</string>
    <string name="warning_change_params">IF YOU WANT TO CHANGE INFORMATION OF YOUR ACCOUNT, PLEASE, ASK ADMINISTRATOR OF THIS APP IN YOUR ORGANISATION</string>
    <string name="table_request">YOUR REQUEST</string>
    <string name="intable_search">SEARCH</string>
    <string name="your_account">YOUR ACCOUNT</string>
    <string name="your_information">YOUR INFORMATION</string>
    <string name="search_error">NOTHING WAS FOUND. PLEASE, CHECK YOUR REQUEST FOR MISTAKES</string>
    <string name="search_success">SOMETHING WAS FOUND. CONGRATULATIONS!</string>
    <string name="temp_text">THIS ACTION TEMPORARILY LOCKED</string>
    <string name="hint_confirm">TYPE ADMIN CODE TO CONFIRM YOUR ACCOUNT</string>
    <string name="admin_confirm">CONFIRM ACCOUNT</string>
    <string name="conf_success">CONFIRMED SUCCESSFULLY!</string>
    <string name="conf_error">PROBLEM WITH CONFIRMING. PLEASE, CHECK THE CODE YOU TYPED</string>
    <string name="new_grade">TYPE GRADE YOU TEACH</string>
    <string name="add_grade_to_gradelist">ADD GRADE TO YOUR GRADELIST</string>
    <string name="finish_addgrades">IF YOU ADDED ALL GRADES, PLEASE, CLICK THIS BUTTON</string>
    <string name="grades_error">ERROR. YOU NOT FILLED THE GAP</string>
    <string name="grades_success">YOU FILLED GRADES SUCCESSFULLY!</string>
    <string name="grade_error">ERROR OCCURRED, PLEASE, ASK ADMINISTATOR FOR HELP</string>
    <string name="the_list_of_teachers">THE LIST OF TEACHERS</string>
    <string name="new_admin_code">TYPE NEW ADMIN CODE</string>
    <string name="save_code">SAVE CODE</string>
    <string name="edit_admin_code">EDIT ADMIN CODE</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="grade_list">SHOW GRADE LIST OF THIS TEACHER</string>
    <string name="name">NAME</string>
    <string name="surname">SURNAME</string>
    <string name="Status">STATUS</string>
    <string name="grade">GRADE</string>
    <string name="age">AGE</string>
    <string name="show_the_list_of_students">SHOW THE LIST OF STUDENTS</string>
    <string name="show_students">SHOW STUDENTS\' LIST</string>
    <string name="change_grade">CHANGE GRADE</string>
</resources>